[package]
name = "flw"
version = "0.0.1"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A command line tool for text processing"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version="4.2.7", features=["derive"]}
csv = "1.2.1"
regex = "1.8.1"
serde = {version="1.0.163", features=["derive"]}
serde_yaml = "0.9.21"
